--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@
       </div>
       <div class="sectiontext">
         <div id="abouttext">
-        I'm Péter Panyik, a <script src="js/myage.js"></script> year old undergraduate student,<br>
+          <div class="abouttextcontainer">
+        I'm Péter Panyik, a <script src="js/myage.js"></script> year old undergraduate student,
         currently studying Computer Science Engineering, at John von Neumann University in Hungary.
         <br>
         <br>
-        Bedsides IT, I also know a bit of electronics, since I studied it as a subject in High School, and sometimes I build circuits for Arduino, along with a bit of C++ coding.
-        <br>
-        <br>
+        Right now I'm a hobbyist programmer, who's mainly interested in gameplay programming (mostly C#), shader programming and vfx.
+        </div>
+        <div class="abouttextcontainer">
         I have a passion for programming and game development, I started programming at the age of 13.
         I remember looking up tutorials to create games, first in OpenGL,
         and after realizing the difficulties of writing a game engine from scratch, I quickly moved to the Unity game engine.
@@ -72,6 +73,10 @@
         <br>
         <br>
         So I started learning JavaScript, and later switched to C#, since it was more popular among Unity users.
+        </div>
+        <div class="abouttextcontainer">
+        Bedsides IT, I also know a bit of electronics, since I studied it as a subject in High School, and sometimes I build circuits for Arduino, along with a bit of C++ coding.
+        </div>
         </div>
       </div>
 </div>
