Skill boxes, color changes
Added skill boxes, and changed secondary text color

--- a/index.html
+++ b/index.html
@@ -86,6 +86,73 @@
       My Skills
       </div>
 
+      <div class="skillscontainer">
+      <div class="skillcontainer">
+        <img src="https://www.svgrepo.com/show/28224/programming.svg" class="skillicon"></img>
+        <div class="skilltext">
+          <div class="skilltitle">Programming</div>
+          <div class="skilldesc">
+            -Most skilled in C#<br>
+            -C#<br>
+            -C#<br>
+            -C#<br>
+            -C#<br>
+          </div>
+        </div>
+      </div>
+      <div class="skillcontainer">
+          <img src="https://www.svgrepo.com/show/28224/programming.svg" class="skillicon"></img>
+          <div class="skilltext">
+            <div class="skilltitle">Programming</div>
+            <div class="skilldesc">
+              -C#<br>
+              -C#<br>
+              -C#<br>
+              -C#<br>
+              -C#<br>
+            </div>
+          </div>
+      </div>
+      <div class="skillcontainer">
+          <img src="https://www.svgrepo.com/show/28224/programming.svg" class="skillicon"></img>
+          <div class="skilltext">
+            <div class="skilltitle">Programming</div>
+            <div class="skilldesc">
+              -C#<br>
+              -C#<br>
+              -C#<br>
+              -C#<br>
+              -C#<br>
+            </div>
+          </div>
+      </div>
+      <div class="skillcontainer">
+          <img src="https://www.svgrepo.com/show/28224/programming.svg" class="skillicon"></img>
+          <div class="skilltext">
+            <div class="skilltitle">Programming</div>
+            <div class="skilldesc">
+              -C#<br>
+              -C#<br>
+              -C#<br>
+              -C#<br>
+              -C#<br>
+            </div>
+          </div>
+      </div>
+      <div class="skillcontainer">
+          <img src="https://www.svgrepo.com/show/28224/programming.svg" class="skillicon"></img>
+          <div class="skilltext">
+            <div class="skilltitle">Programming</div>
+            <div class="skilldesc">
+              -C#<br>
+              -C#<br>
+              -C#<br>
+              -C#<br>
+              -C#<br>
+            </div>
+          </div>
+      </div>
+      </div>
 </div>
 
 <div id="boxprojects" class="section">
