--- a/index.html
+++ b/index.html
@@ -88,67 +88,75 @@
 
       <div class="skillscontainer">
       <div class="skillcontainer">
-        <img src="https://www.svgrepo.com/show/28224/programming.svg" class="skillicon"></img>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Video_game_controller_icon_designed_by_Maico_Amorim.svg/1249px-Video_game_controller_icon_designed_by_Maico_Amorim.svg.png" class="skillicon"></img>
         <div class="skilltext">
-          <div class="skilltitle">Programming</div>
+          <div class="skilltitle">Gameplay Programming</div>
           <div class="skilldesc">
-            -Most skilled in C#<br>
-            -C#<br>
-            -C#<br>
-            -C#<br>
-            -C#<br>
+            -Most skilled in C# and Unity<br>
+            -I love to create:<br>
+            &nbsp ·Interactive mechanics<br>
+            &nbsp ·Procedural content<br>
+            -I can:<br>
+            &nbsp ·Design smaller scale systems<br>
+            &nbsp ·Write optimized code<br>
+            &nbsp ·Burst-compileable code<br>
+            -Currently learning:<br>
+            &nbsp ·Unity's ECS & DOTS<br>
+            &nbsp ·Networking
           </div>
         </div>
       </div>
       <div class="skillcontainer">
-          <img src="https://www.svgrepo.com/show/28224/programming.svg" class="skillicon"></img>
+          <img src="http://cdn.onlinewebfonts.com/svg/img_571170.png" class="skillicon"></img>
           <div class="skilltext">
-            <div class="skilltitle">Programming</div>
+            <div class="skilltitle">General Programming</div>
             <div class="skilldesc">
-              -C#<br>
-              -C#<br>
-              -C#<br>
-              -C#<br>
-              -C#<br>
+              -I have knowledge of:<br>
+              &nbsp ·Object oriented programming<br>
+              &nbsp ·Data oriented programming<br>
+              &nbsp ·Memory management<br>
+              &nbsp ·Low level programming<br>
+              -Proficient in C#<br>
+              -C and C++<br>
+              -I also know a bit of:<br>
+              &nbsp ·Assembly<br>
+              &nbsp ·Java<br>
+            </div>
+          </div>
+      </div>
+      <div class="skillcontainer">
+          <img src="https://image.flaticon.com/icons/png/512/1792/1792311.png" class="skillicon"></img>
+          <div class="skilltext">
+            <div class="skilltitle">Shader Programming & VFX</div>
+            <div class="skilldesc">
+              -Hlsl<br>
+            </div>
+          </div>
+      </div>
+      <div class="skillcontainer">
+          <img src="https://pic.onlinewebfonts.com/svg/img_356899.png" class="skillicon"></img>
+          <div class="skilltext">
+            <div class="skilltitle">Databases</div>
+            <div class="skilldesc">
+              -Database design:<br>
+              &nbsp ·Relational Schemas<br>
+              &nbsp ·ERDs<br>
+              -Known database engines:<br>
+              &nbsp ·Oracle DB<br>
+              &nbsp ·MySQL<br>
             </div>
           </div>
       </div>
       <div class="skillcontainer">
           <img src="https://www.svgrepo.com/show/28224/programming.svg" class="skillicon"></img>
           <div class="skilltext">
-            <div class="skilltitle">Programming</div>
+            <div class="skilltitle">Websites</div>
             <div class="skilldesc">
-              -C#<br>
-              -C#<br>
-              -C#<br>
-              -C#<br>
-              -C#<br>
-            </div>
-          </div>
-      </div>
-      <div class="skillcontainer">
-          <img src="https://www.svgrepo.com/show/28224/programming.svg" class="skillicon"></img>
-          <div class="skilltext">
-            <div class="skilltitle">Programming</div>
-            <div class="skilldesc">
-              -C#<br>
-              -C#<br>
-              -C#<br>
-              -C#<br>
-              -C#<br>
-            </div>
-          </div>
-      </div>
-      <div class="skillcontainer">
-          <img src="https://www.svgrepo.com/show/28224/programming.svg" class="skillicon"></img>
-          <div class="skilltext">
-            <div class="skilltitle">Programming</div>
-            <div class="skilldesc">
-              -C#<br>
-              -C#<br>
-              -C#<br>
-              -C#<br>
-              -C#<br>
+              -Full stack development:<br>
+              &nbsp ·Javascript<br>
+              &nbsp ·Html<br>
+              &nbsp ·Css<br>
+              &nbsp ·Php<br>
             </div>
           </div>
       </div>
