More text + tweaks

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
         Right now I'm a hobbyist programmer, who's mainly interested in gameplay programming (mostly C#), shader programming and vfx.
         </div>
         <div class="abouttextcontainer">
+        My current studies include: general programming in C# (using .Net), Java and C++; creating desktop and mobile applications using WPF,
+         Xamarin and Xcode; low level programming in Assembly; databases, full stack web development, and a bit of game development.
+        </div>
+        <div class="abouttextcontainer">
         I have a passion for programming and game development, I started programming at the age of 13.
         I remember looking up tutorials to create games, first in OpenGL,
         and after realizing the difficulties of writing a game engine from scratch, I quickly moved to the Unity game engine.
@@ -93,13 +97,13 @@
           <div class="skilltitle">Gameplay Programming</div>
           <div class="skilldesc">
             -Most skilled in C# and Unity<br>
+            -I can:<br>
+            &nbsp ·Design and implement smaller scale systems<br>
+            &nbsp ·Write optimized code<br>
+            &nbsp ·Burst-compileable code<br>
             -I love to create:<br>
             &nbsp ·Interactive mechanics<br>
             &nbsp ·Procedural content<br>
-            -I can:<br>
-            &nbsp ·Design smaller scale systems<br>
-            &nbsp ·Write optimized code<br>
-            &nbsp ·Burst-compileable code<br>
             -Currently learning:<br>
             &nbsp ·Unity's ECS & DOTS<br>
             &nbsp ·Networking
@@ -111,7 +115,7 @@
           <div class="skilltext">
             <div class="skilltitle">General Programming</div>
             <div class="skilldesc">
-              -I have knowledge of:<br>
+              -Knowledge of:<br>
               &nbsp ·Object oriented programming<br>
               &nbsp ·Data oriented programming<br>
               &nbsp ·Memory management<br>
@@ -129,7 +133,13 @@
           <div class="skilltext">
             <div class="skilltitle">Shader Programming & VFX</div>
             <div class="skilldesc">
-              -Hlsl<br>
+              -I can use:<br>
+              &nbsp ·Hlsl<br>
+              &nbsp ·ShaderLab language<br>
+              &nbsp ·Shader Graph<br>
+              &nbsp ·Compute shaders<br>
+              &nbsp ·VFX graph<br>
+              &nbsp ·Shuriken particle system<br>
             </div>
           </div>
       </div>
@@ -139,8 +149,13 @@
             <div class="skilltitle">Databases</div>
             <div class="skilldesc">
               -Database design:<br>
+              &nbsp ·Planning and DDL implementation<br>
               &nbsp ·Relational Schemas<br>
               &nbsp ·ERDs<br>
+              -Database usage:<br>
+              &nbsp ·DML, DCL and DQL commands<br>
+              &nbsp ·Complex sql queries<br>
+              &nbsp ·Functions, procedures, triggers<br>
               -Known database engines:<br>
               &nbsp ·Oracle DB<br>
               &nbsp ·MySQL<br>
