Project previews, project pages

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Peter's site</title>
+    <title>Peter's portfolio</title>
     <link rel="icon" href="img/favicon.ico"><!--icon made with Magneto font-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
@@ -62,25 +62,22 @@
         <br>
         <br>
         Right now I'm a hobbyist programmer, who's mainly interested in gameplay programming (mostly C#), shader programming and vfx.
-        </div>
-        <div class="abouttextcontainer">
+          <br>
+          <br>
         My current studies include: general programming in C# (using .Net), Java and C++; creating desktop and mobile applications using WPF,
          Xamarin and Xcode; low level programming in Assembly; databases, full stack web development, and a bit of game development.
-        </div>
-        <div class="abouttextcontainer">
-        I have a passion for programming and game development, I started programming at the age of 13.
-        I remember looking up tutorials to create games, first in OpenGL,
-        and after realizing the difficulties of writing a game engine from scratch, I quickly moved to the Unity game engine.
+          <br>
+          <br>
+        I have a passion for programming and game development, I started programming at the age of 13, using Unity.
         <br>
         <br>
         My motivation came from popular sandbox games, such as Garry's Mod, Minecraft, Terraria. I love to create things, and game development had a promise of this creative freedom.
         <br>
-        <br>
-        So I started learning JavaScript, and later switched to C#, since it was more popular among Unity users.
-        </div>
-        <div class="abouttextcontainer">
+          <br>
         Bedsides IT, I also know a bit of electronics, since I studied it as a subject in High School, and sometimes I build circuits for Arduino, along with a bit of C++ coding.
         </div>
+        <div class="aboutsidebar"></div>
+          <img src="img/fresh.jpg" class="portfoliopic"></img>
         </div>
       </div>
 </div>
@@ -98,7 +95,7 @@
           <div class="skilldesc">
             -Most skilled in C# and Unity<br>
             -I can:<br>
-            &nbsp ·Design and implement smaller scale systems<br>
+            &nbsp ·Create smaller scale systems<br>
             &nbsp ·Write optimized code<br>
             &nbsp ·Burst-compileable code<br>
             -I love to create:<br>
@@ -133,11 +130,12 @@
           <div class="skilltext">
             <div class="skilltitle">Shader Programming & VFX</div>
             <div class="skilldesc">
-              -I can use:<br>
+              -Shaders:<br>
               &nbsp ·Hlsl<br>
-              &nbsp ·ShaderLab language<br>
-              &nbsp ·Shader Graph<br>
+              &nbsp ·ShaderLab<br>
+              &nbsp ·Shader graph<br>
               &nbsp ·Compute shaders<br>
+              -Particles:<br>
               &nbsp ·VFX graph<br>
               &nbsp ·Shuriken particle system<br>
             </div>
