--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/masonry.pkgd.min.js"></script>
   </head>
   <body>
     <canvas id="background"></canvas>
@@ -86,7 +87,7 @@
       My Skills
       </div>
 
-      <div class="skillscontainer">
+      <div class="skillscontainer" id="skillgrid">
       <div class="skillcontainer">
         <img src="img/skills/controller.svg" class="skillicon"></img>
         <div class="skilltext">
@@ -168,6 +169,7 @@
           </div>
       </div>
       </div>
+      <script src="js/arrange_skills.js"></script>
 </div>
 
 <div id="boxprojects" class="section">
