Added HueHades project

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="sectiontext">
         <div id="abouttext">
           <div class="abouttextcontainer">
-            <img src="img/peter_p.jpg" class="portfoliopic"></img>
+            <img src="img/peter_p.png" class="portfoliopic"></img>
         I'm Péter Panyik, a <script src="js/myage.js"></script> year old undergraduate student,
         currently studying Computer Science Engineering, at John von Neumann University in Hungary.
         <br>
@@ -184,6 +184,7 @@
     <script src="js/projects.js"></script>
 
     <!--script>loadProject("fps");</script-->
+    <script>loadProject("huehades");</script>
     <script>loadProject("voxel");</script>
     <script>loadProject("paradise");</script>
     <script>loadProject("gameoflife");</script>
@@ -236,7 +237,7 @@
       </div>
       <input type="text" readonly class="conttext" id="contactDiscord"
         value=
-        "Peter226#8439"
+        "peter226"
         >
       </input>
       <img src="img/cpy.svg" alt="" class="cpypic">
