--- a/projects/huehades/page.html
+++ b/projects/huehades/page.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Game Of Life</title>
+    <title>Voxel Terrain</title>
     <link rel="icon" href="../../img/favicon.ico"><!--icon made with Magneto font-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <div class="section">
-        <h1>GPU Game Of Life Implementation</h1>
+        <h1>Hue Hades - a fast image editor</h1>
         <div class="sectiontext">
           <p>
             This page is [Work In Progress]
@@ -21,7 +21,7 @@
         </div>
         <div class="sectiontext">
           <p>
-            In the meantime, you may download the project by clicking <a href="https://github.com/Peter226/GPUGameOfLife">here!</a>
+            In the meantime, you may download the project by clicking <a href="https://github.com/Peter226/HueHades">here!</a>
           </p>
         </div>
       </div>
