--- a/projects/paradise/page.html
+++ b/projects/paradise/page.html
@@ -19,6 +19,11 @@
             This page is [Work In Progress]
           </p>
         </div>
+        <div class="sectiontext">
+          <p>
+            In the meantime, you may download the project by clicking <a href="https://github.com/Peter226/PewPew-Paradise">here!</a>
+          </p>
+        </div>
       </div>
     </div>
   </body>
