--- a/projects/fps/page.html
+++ b/projects/fps/page.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="../../img/favicon.ico"><!--icon made with Magneto font-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../projectstyle.css">
+    <link rel="stylesheet" href="../../css/projectstyle.css">
     <script src="../../js/jquery.js"></script>
     <script src="../../js/main.js"></script>
   </head>
