--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/copyright.css">
+    <link rel="stylesheet" href="css/skills.css">
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
@@ -102,9 +103,12 @@
 
       <div class="skillscontainer" id="skillgrid">
       <div class="skillcontainer">
-        <img src="img/skills/controller.svg" class="skillicon"></img>
-        <div class="skilltext">
+        <div class="skillheader">
+          <img src="img/skills/controller.svg" class="skillicon"></img>
           <div class="skilltitle">Gameplay Programming</div>
+        </div>
+        <div class="skilltext">
+          
           <div class="skilldesc">
             -C# and Unity<br>
             -Game systems<br>
@@ -116,9 +120,29 @@
         </div>
       </div>
       <div class="skillcontainer">
+        <div class="skillheader">
+          <img src="img/skills/explosion.svg" class="skillicon"></img>
+          <div class="skilltitle">Shader Programming & VFX</div>
+        </div>
+        <div class="skilltext">
+          <div class="skilldesc">
+            -Shaders:<br>
+            &nbsp ·Hlsl<br>
+            &nbsp ·ShaderLab<br>
+            &nbsp ·Shader graph<br>
+            &nbsp ·Compute shaders<br>
+            -Particles:<br>
+            &nbsp ·VFX graph<br>
+            &nbsp ·Shuriken particle system<br>
+          </div>
+        </div>
+    </div>
+      <div class="skillcontainer">
+        <div class="skillheader">
           <img src="img/skills/processor.svg" class="skillicon"></img>
+          <div class="skilltitle">General Programming</div>
+        </div>
           <div class="skilltext">
-            <div class="skilltitle">General Programming</div>
             <div class="skilldesc">
               -Knowledge of:<br>
               &nbsp ·Object oriented programming<br>
@@ -134,25 +158,11 @@
           </div>
       </div>
       <div class="skillcontainer">
-          <img src="img/skills/explosion.svg" class="skillicon"></img>
-          <div class="skilltext">
-            <div class="skilltitle">Shader Programming & VFX</div>
-            <div class="skilldesc">
-              -Shaders:<br>
-              &nbsp ·Hlsl<br>
-              &nbsp ·ShaderLab<br>
-              &nbsp ·Shader graph<br>
-              &nbsp ·Compute shaders<br>
-              -Particles:<br>
-              &nbsp ·VFX graph<br>
-              &nbsp ·Shuriken particle system<br>
-            </div>
-          </div>
-      </div>
-      <div class="skillcontainer">
-          <img src="img/skills/database.svg" class="skillicon"></img>
-          <div class="skilltext">
+        <div class="skillheader">
+            <img src="img/skills/database.svg" class="skillicon"></img>
             <div class="skilltitle">Databases</div>
+          </div>
+          <div class="skilltext">
             <div class="skilldesc">
               -Database design:<br>
               &nbsp ·Planning and DDL implementation<br>
@@ -169,9 +179,11 @@
           </div>
       </div>
       <div class="skillcontainer">
+        <div class="skillheader">
           <img src="img/skills/webprog.svg" class="skillicon"></img>
+          <div class="skilltitle">Websites</div>
+        </div>
           <div class="skilltext">
-            <div class="skilltitle">Websites</div>
             <div class="skilldesc">
               -Full stack development:<br>
               &nbsp ·Javascript<br>
