--- a/index.html
+++ b/index.html
@@ -202,17 +202,14 @@
       Projects
       </div>
 
-
       <ul class="projectlist" id="projectlisting">
-        <script src="js/projects.js"></script>
-
+        <script src="/src/projects/projects.js"></script>
         <!--script>loadProject("fps");</script-->
         <script>loadProject("huehades");</script>
         <script>loadProject("voxel");</script>
         <script>loadProject("paradise");</script>
         <script>loadProject("gameoflife");</script>
         <script>loadProject("survival");</script>
-
       </ul>
     </div>
 
