--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </div>
 
       <ul class="projectlist" id="projectlisting">
-        <script src="/src/projects/projects.js"></script>
+        <script src="js/projects.js"></script>
         <!--script>loadProject("fps");</script-->
         <script>loadProject("huehades");</script>
         <script>loadProject("voxel");</script>
