--- a/projects/fps/page.html
+++ b/projects/fps/page.html
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <div class="section">
-        <h1>Multiplayer FPS prototype</h1>
+        <h1>Physics Based Character Controller</h1>
         <div class="sectiontext">
           <p>
             This page is [Work In Progress]
