--- a/projects/gardeneye/page.html
+++ b/projects/gardeneye/page.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Game Of Life</title>
+    <title>Sandbox Survival</title>
     <link rel="icon" href="../../img/favicon.ico"><!--icon made with Magneto font-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <div class="section">
-        <h1>Tower Defense Turret Range Indicator</h1>
+        <h1>GardenEye - Plant Identification App</h1>
         <div class="sectiontext">
           <p>
             This page is [Work In Progress]
