--- a/projects/survival/page.html
+++ b/projects/survival/page.html
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <div class="section">
-        <h1>Sandbox Survival [discontinued]</h1>
+        <h1>Sandbox Survival (discontinued)</h1>
         <div class="sectiontext">
           <p>
             This page is [Work In Progress]
