--- a/index.html
+++ b/index.html
@@ -220,27 +220,25 @@
       </div>
       <script src="js/projects.js"></script>
 
-      <!--h2>Professional</h2-->
+      <h2 class="projectcategory">Professional</h2>
         <ul class="projectlist" id="pl1">
-          <script>loadProject("huehades","pl1");</script>
-          <script>loadProject("voxel","pl1");</script>
-          <script>loadProject("paradise","pl1");</script>
-          <script>loadProject("gameoflife","pl1");</script>
-          <script>loadProject("survival","pl1");</script>
+          <script>loadProject("territoryborders","pl1");</script>
+          <script>loadProject("rangeindicator","pl1");</script>
         </ul>
-      <!--h2>University</h2>
+      <h2 class="projectcategory">University</h2>
       <ul class="projectlist" id="pl2">
         <script>loadProject("huehades","pl2");</script>
         <script>loadProject("paradise","pl2");</script>
+        <script>loadProject("timebooker","pl2");</script>
+        <script>loadProject("gardeneye","pl2");</script>
       </ul>
-      <h2>Hobby</h2>
+      <h2 class="projectcategory">Hobby</h2>
       <ul class="projectlist" id="pl3">
-        
-        <script>loadProject("fps","pl3");</script>
         <script>loadProject("voxel","pl3");</script>
         <script>loadProject("gameoflife","pl3");</script>
         <script>loadProject("survival","pl3");</script>
-      </ul-->
+        <script>loadProject("fps","pl3");</script>
+      </ul>
     </div>
 
 
