--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/copyright.css">
+    <link rel="stylesheet" href="css/scrollbar.css">
     <link rel="stylesheet" href="css/skills.css">
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
