--- a/projects/huehades/page.html
+++ b/projects/huehades/page.html
@@ -2,11 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Voxel Terrain</title>
+    <title>Hue Hades</title>
     <link rel="icon" href="../../img/favicon.ico"><!--icon made with Magneto font-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../css/projectstyle.css">
+    <link rel="stylesheet" href="../../css/scrollbar.css">
     <script src="../../js/jquery.js"></script>
     <script src="../../js/main.js"></script>
   </head>
@@ -26,5 +27,6 @@
         </div>
       </div>
     </div>
+    <script type="module" src="/src/projects/main.ts"></script>
   </body>
 </html>
