--- a/projects/rangeindicator/page.html
+++ b/projects/rangeindicator/page.html
@@ -2,11 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Game Of Life</title>
+    <title>Range Indicator</title>
     <link rel="icon" href="../../img/favicon.ico"><!--icon made with Magneto font-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../css/projectstyle.css">
+    <link rel="stylesheet" href="../../css/scrollbar.css">
     <script src="../../js/jquery.js"></script>
     <script src="../../js/main.js"></script>
   </head>
@@ -19,7 +20,11 @@
             This page is [Work In Progress]
           </p>
         </div>
+        <div class="centeringdiv">
+          <iframe src="https://store.steampowered.com/widget/1986940/" frameborder="0" width="646" height="190"></iframe>
+        </div>
       </div>
     </div>
+    <script type="module" src="/src/projects/main.ts"></script>
   </body>
 </html>
