home layout mobile

--- a/index.html
+++ b/index.html
@@ -43,35 +43,34 @@
 
 
     <div id="boxhome" classList="section">
-      <div class="flex-row">
-      <div class="portrait-container">
-        <div class="portrait-aligner">
-          <div id="portrait-anchor">
-        </div>
-    </div>
-      </div>
-      <div class="verticalwrapper">
-        <div class="centeredtext">
-          <div id="welcome">
-            <div id="welcometxt">
-              <h1 id="welcometxtwelcome">
-              <br>
-              Hi! Welcome!<br>
-              I'm Péter 😄
-              </h1>
-              <h2 id="welcometxtlist">
-              - Freelancer<br>
-              - Unity Developer<br>
-              - Shader Programmer
-              </h2>
-              <br>
-              <button class="button" onclick="scrollToElement('boxprojects')">⏬ See My Projects ⏬</button>
-            </div>
+      <div class="home-layout">
+        <div class="portrait-container">
+          <div class="portrait-aligner">
+            <div id="portrait-anchor"></div>
           </div>
-          <script src="js/welcome.js"></script>
+        </div>
+        <div class="verticalwrapper">
+          <div class="centeredtext">
+            <div id="welcome">
+              <div id="welcometxt">
+                <h1 id="welcometxtwelcome">
+                <br>
+                Hi! Welcome!<br>
+                I'm Péter 😄
+                </h1>
+                <h2 id="welcometxtlist">
+                - Freelancer<br>
+                - Unity Developer<br>
+                - Shader Programmer
+                </h2>
+                <br>
+                <button class="button" onclick="scrollToElement('boxprojects')">⏬ See My Projects ⏬</button>
+              </div>
+            </div>
+            <script src="js/welcome.js"></script>
+          </div>
         </div>
       </div>
-    </div>
     </div>
 
 
