--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div id="portrait-anchor"></div>
           </div>
         </div>
-        <div class="verticalwrapper">
+        <div class="welcome-text-wrapper">
           <div class="centeredtext">
             <div id="welcome">
               <div id="welcometxt">
